--- a/lab/kalla_broockman/R2Python.ipynb
+++ b/lab/kalla_broockman/R2Python.ipynb
@@ -2182,23 +2182,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Issue Here:\n",
+    "* Values do not match up despite trying 3 different methods"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>PC4</th>\n",
+       "      <th>PC5</th>\n",
+       "      <th>PC6</th>\n",
+       "      <th>PC7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>miami_trans_law_t1</th>\n",
+       "      <td>0.366</td>\n",
+       "      <td>0.533</td>\n",
+       "      <td>0.217</td>\n",
+       "      <td>0.354</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>-0.159</td>\n",
+       "      <td>-0.612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>miami_trans_law2_t1</th>\n",
+       "      <td>0.385</td>\n",
+       "      <td>0.501</td>\n",
+       "      <td>0.171</td>\n",
+       "      <td>0.077</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>0.126</td>\n",
+       "      <td>0.741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>therm_trans_t1</th>\n",
+       "      <td>0.395</td>\n",
+       "      <td>0.108</td>\n",
+       "      <td>-0.003</td>\n",
+       "      <td>-0.894</td>\n",
+       "      <td>0.012</td>\n",
+       "      <td>-0.036</td>\n",
+       "      <td>-0.178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender_norm_sexchange_t1</th>\n",
+       "      <td>0.329</td>\n",
+       "      <td>0.057</td>\n",
+       "      <td>-0.923</td>\n",
+       "      <td>0.156</td>\n",
+       "      <td>-0.112</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>-0.013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender_norm_moral_t1</th>\n",
+       "      <td>-0.388</td>\n",
+       "      <td>0.434</td>\n",
+       "      <td>-0.078</td>\n",
+       "      <td>-0.116</td>\n",
+       "      <td>-0.272</td>\n",
+       "      <td>0.731</td>\n",
+       "      <td>-0.180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender_norm_abnormal_t1</th>\n",
+       "      <td>-0.388</td>\n",
+       "      <td>0.326</td>\n",
+       "      <td>-0.241</td>\n",
+       "      <td>-0.126</td>\n",
+       "      <td>0.805</td>\n",
+       "      <td>-0.132</td>\n",
+       "      <td>0.053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender_norm_trans_moral_wrong_t1</th>\n",
+       "      <td>-0.391</td>\n",
+       "      <td>0.393</td>\n",
+       "      <td>-0.092</td>\n",
+       "      <td>-0.125</td>\n",
+       "      <td>-0.506</td>\n",
+       "      <td>-0.636</td>\n",
+       "      <td>0.091</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[ 0.366,  0.533,  0.217,  0.354,  0.095, -0.159, -0.612],\n",
-       "       [ 0.385,  0.501,  0.171,  0.077,  0.017,  0.126,  0.741],\n",
-       "       [ 0.395,  0.108, -0.003, -0.894,  0.012, -0.036, -0.178],\n",
-       "       [ 0.329,  0.057, -0.923,  0.156, -0.112,  0.022, -0.013],\n",
-       "       [-0.388,  0.434, -0.078, -0.116, -0.272,  0.731, -0.18 ],\n",
-       "       [-0.388,  0.326, -0.241, -0.126,  0.805, -0.132,  0.053],\n",
-       "       [-0.391,  0.393, -0.092, -0.125, -0.506, -0.636,  0.091]])"
+       "                                    PC1    PC2    PC3    PC4    PC5    PC6  \\\n",
+       "miami_trans_law_t1                0.366  0.533  0.217  0.354  0.095 -0.159   \n",
+       "miami_trans_law2_t1               0.385  0.501  0.171  0.077  0.017  0.126   \n",
+       "therm_trans_t1                    0.395  0.108 -0.003 -0.894  0.012 -0.036   \n",
+       "gender_norm_sexchange_t1          0.329  0.057 -0.923  0.156 -0.112  0.022   \n",
+       "gender_norm_moral_t1             -0.388  0.434 -0.078 -0.116 -0.272  0.731   \n",
+       "gender_norm_abnormal_t1          -0.388  0.326 -0.241 -0.126  0.805 -0.132   \n",
+       "gender_norm_trans_moral_wrong_t1 -0.391  0.393 -0.092 -0.125 -0.506 -0.636   \n",
+       "\n",
+       "                                    PC7  \n",
+       "miami_trans_law_t1               -0.612  \n",
+       "miami_trans_law2_t1               0.741  \n",
+       "therm_trans_t1                   -0.178  \n",
+       "gender_norm_sexchange_t1         -0.013  \n",
+       "gender_norm_moral_t1             -0.180  \n",
+       "gender_norm_abnormal_t1           0.053  \n",
+       "gender_norm_trans_moral_wrong_t1  0.091  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2212,7 +2333,7 @@
     "                        columns=['PC1', 'PC2', \"PC3\", \"PC4\", \"PC5\", \"PC6\", \"PC7\"],\n",
     "                        index=df2.columns)\n",
     "\n",
-    "np.array(loadings * -1)\n"
+    "loadings * -1\n"
    ]
   },
   {
