--- a/lab/lab3/PS88_lab_week3.ipynb
+++ b/lab/lab3/PS88_lab_week3.ipynb
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.LineCollection at 0x7f13d079a2e0>"
+       "<matplotlib.collections.LineCollection at 0x7f992aaee310>"
       ]
      },
      "execution_count": 5,
@@ -204,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7008bfcb03a94ed6915efff000fbc2d1",
+       "model_id": "3e3da5bbb8d84f12976680236183592d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,7 +312,7 @@
     {
      "data": {
       "text/plain": [
-       "55"
+       "46"
       ]
      },
      "execution_count": 8,
@@ -568,10 +568,6 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -2197,7 +2193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a0982de62564cb19e6625140cb90e1f",
+       "model_id": "761593ff997c476eac1f0dc9a44532a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3456,7 +3452,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c39f0826f194944a5d0f4233c572118",
+       "model_id": "8d89e5f3ed6240948486fad9e9b3bd73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3522,7 +3518,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ead372b1ac345e68ba82774dfcdaece",
+       "model_id": "8b03bd35e4084583890fe83c0cb7f7f4",
        "version_major": 2,
        "version_minor": 0
       },
